Updated body background color to fix whitespace on iPad screens

--- a/css/app.css
+++ b/css/app.css
@@ -20,6 +20,7 @@ body {
     /* background-image: url('../img/hypnotize.png'); /*img downloaded from pngtree*/
     font-family: 'Rock Salt', cursive;
     color: black;
+    background-color: #fa5050;
 }
 
 .emphasis {
